public/css/style.css
h1 {
    font-family: 'Satisfy', cursive;
    font-weight: bold;
    font-size: 32px;
}

h2 {
    font-size: 24px;
}

nav {
    padding: 12px;
}

/* Atm seems like how we could have it. Prone to change in the future */
.main-section {
    background-image: url('../img/main_img.jpg');
    background-size: cover;
    padding-top: 110px;
}

/* Custom chnages made on the card class on top of Bulma */
.custom-card {
    margin-left: 10%;
    /* margin-right: 10%;
    margin-top: 5%;
    margin-bottom: 5%;
    padding: 10px;*/
    border-radius: 14px;
    z-index: 1;
    background-color: white;
}

.search-style {
    margin-top: 50px;
    margin-bottom: 25px;
}
.search-title-style {
    font-weight: bold;
}


#filters {
    display: none;
    padding: 20px;
}

.filter_sections {
    margin-top: 7px;
}

.cursor-link:hover {
    cursor:pointer;
}

.cursor-link:active {
    cursor: progress;
}

.navbar {
    /*background-color: #424b54;*/
    padding: 12px;
    position: fixed;
    width: 100%;
}

.navbar-item {
    color: white;

}

.recipe-results-img {
    object-fit: cover;
}

.results {
    padding-top: 3%;
    padding-bottom: 3%;
    padding-left: 10%;
    padding-right: 10%;
}

/*.footer {*/
/*    background-color: #424b54;*/
/*    padding: 20px;*/
/*    color: white;*/
/*    font-size: 18px;;*/
/*}*/

.dropmenu {
    /* background-color: lightgrey; */
    border-color: rgb(231, 231, 231);
    border-style: solid;
    border-width: 1.5px;
    padding: 20px;
    border-radius: 5px;
    margin-top: 10px;
}

.notifications {
    position:fixed;
    top:0;
    width:100%;
    right:0;
    z-index: 998;
}
.notifications .notification {
    position: absolute;
    top: 0px;
    right: 10px;
    z-index: 999;
    transition: all 500ms ease-in-out;
}

.truncate-recipe-search {
    width: 300px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.truncate-favourite-recipe {
    width: 500px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.truncate-recipe-details {
    width: 500px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.truncate-shopping-list {
    width: 480px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.truncate-location {
    width: 450px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

@media (max-width: 2200px) {
    .truncate-recipe-search {
        width: 250px;
    }
}


@media (max-width: 2000px) {
    .truncate-recipe-search {
        width: 220px;
    }
}

@media (max-width: 1800px) {
    .truncate-recipe-search {
        width: 190px;
    }
}

@media (max-width: 1600px) {
    .truncate-recipe-search {
        width: 150px;
    }
}

@media (max-width: 1400px) {
    .truncate-recipe-search {
        width: 75px;
    }
}
@media (max-width: 1200px) {
    .truncate-recipe-search {
        width: 50px;
    }
}

@media (max-width: 1000px) {
    .truncate-recipe-search {
        width: 30px;
    }
}

@media (max-width: 768px) {
    .truncate-recipe-search {
        width: 400px;
    }
}

@media (max-width: 768px) {
    .truncate-recipe-search {
        width: 400px;
    }
}

@media (max-width: 640px) {
    .truncate-recipe-search {
        width: 350px;
    }
}


@media (max-width: 640px) {
    .truncate-recipe-search {
        width: 350px;
    }
}

@media (max-width: 540px) {
    .truncate-recipe-search {
        width: 300px;
    }
}

@media (max-width: 414px) {
    .truncate-recipe-search {
        width: 150px;
    }
}

@media (max-width: 375px) {
    .truncate-recipe-search {
        width: 100px;
    }
    .truncate-shopping-list {
        width: 200px;
    }
    .truncate-location {
        width: 230px;
    }

    .truncate-recipe-details {
        width: 150px;
    }
}

